crates/cpg-schema/tests/snapshots/contracts__handler_clauses.snap
---
source: crates/cpg-schema/tests/contracts.rs
expression: text
---
table handler_clauses
family findings
key snapshot_id, handler_node_id
check span_order: start_byte >= 0 AND end_byte >= start_byte
@lctx.family=findings
@lctx.table=handler_clauses
snapshot_id: FixedSizeBinary(16) NOT NULL
function_node_id: FixedSizeBinary(16) NOT NULL
try_node_id: FixedSizeBinary(16) NOT NULL
handler_node_id: FixedSizeBinary(16) NOT NULL
ordinal: Int64 NOT NULL
module_node_id: FixedSizeBinary(16) NOT NULL
try_fact_id: FixedSizeBinary(16) NOT NULL
handler_fact_id: FixedSizeBinary(16) NOT NULL
type_node_id: FixedSizeBinary(16) NULL
type_fact_id: FixedSizeBinary(16) NULL
try_region_fact_id: FixedSizeBinary(16) NOT NULL
start_byte: Int64 NOT NULL
end_byte: Int64 NOT NULL
entry_condition_id: FixedSizeBinary(16) NOT NULL
entry_approximated: Boolean NOT NULL
